# amazon-recsys-databricks

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: paths.json  spark_config.json
src/: config.py
src/amazon_recsys/: config.py
src/data/: __init__.py  etl.py
src/utils/: __init__.py  spark_session.py
tests/: test_config_paths.py
